# z2o-k7e.github.io

./: .gitignore  README.md  book.toml  index.html  justfile
book/: 404.html  (+4 more)
src/halo2/: 0xparc halo2.md  1-Simple-Example.md  1. Simple Examples.md  2-Fibonacci-example-1.md  2. Fibonacci (halo2-hope).md  2. Fibonacci-example-1.md  3-Fibonacci-example-2.md  3. Fibonacci (ex1+ex2).md  3. Fibonacci-example-2.md  4-IsZero-Check-example-3.md  4. IsZero Check (ex3).md  4. IsZero Check - example-3.md  5-Range-check.md  5. Range check.md  6-Range-Check(code-explanation).md  6. Range Check(code explanation).md  6. impl relationship.md  7-Range-Check-lookup(example-2).md  7. Range Check (ex3).md  7. Range Check - lookup - example-2.md  8-Range-Check(example-3).md  8. decomposed.md  9-decomposed.md  9. decomposed.md  Cargo.toml  Hammster.md  StarLi halo2.md  ZKP-APP.md  Zordle.md  cost-model.md  halo2 Source Code.md  halo2-QA.md  halo2.md  overview.md  toc.md
src/halo2/chap-0/: readme.md
src/halo2/chap-1/: readme.md
src/halo2/chap-2/: readme.md
src/halo2/chap-3/: readme.md
src/halo2/chap-4/: readme.md
src/halo2/components/: Inner Product Argument.md  Lookup.md  Permutation argument.md  Proving system.md  Recursive.md
src/halo2/draws/: Fibonacci(halo2).excalidraw.md  Simple-Example(Overview).excalidraw.md  Simple-Example(halo2).excalidraw.md  halo2.excalidraw.md
src/halo2/src/: lib.rs  main.rs
src/halo2/tmp/: 6-Range-Check(code-explanation).md  7-Range-Check-lookup(example-2).md  8-Range-Check(example-3).md  9-decomposed.md  Zordle.md  halo2-learning-materials.md
(+121 files in other folders)
