[package]
name = "halo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters", "plotters/bitmap_backend","plotters/bitmap_encoder"]

[dependencies]
halo2_proofs = { git = "https://github.com/zcash/halo2.git", version = "0.3"}
plotters = { version = "0.3.0", default-features = true, optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }